# pg-reindexer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-adaptive-replication-checks.md  README.md  config.example.toml
.github/workflows/: release.yml  rust.yml  security.yml
scripts/: test_schemas_and_indexes.sql
src/: checks.rs  config.rs  connection.rs  credentials.rs  deadlock.rs  index_operations.rs  lib.rs  logging.rs  main.rs  memory_table.rs  orchestrator.rs  plan.rs  queries.rs  save.rs  schema.rs  state.rs  types.rs  validation.rs
tests/: chaos_tests.rs  cli_validation.rs  db_validation.rs  logging_and_dry_run.rs  plan_subcommand.rs  post_analyze_unit.rs  run_cargo_run_test.sh  run_db_tests.sh  signal_handling.rs  ssl_tests.rs
