[package]
name = "pg-reindexer"
version = "2.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
native-tls = "0.2"
postgres-native-tls = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# Optimize for size. "z" is even more aggressive than "s"
opt-level = "z"
# Enable link-time optimization
lto = true
# Reduce code generation units for maximum optimization
codegen-units = 1
# Remove debug info and symbol tables
strip = true
