[package]
name = "pg-reindexer"
version = "2.6.0"
edition = "2024"
description = "A high-performance, production-ready PostgreSQL index maintenance tool written in Rust"
categories = ["database", "command-line-utilities"]
keywords = ["postgres", "postgresql", "index"]
license = "MIT"
repository = "https://github.com/kylorend3r/pg-reindexer"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
native-tls = { version = "0.2", features = ["vendored"] }
postgres-native-tls = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
# Optimize for size. "z" is even more aggressive than "s"
opt-level = "z"
# Enable link-time optimization
lto = true
# Reduce code generation units for maximum optimization
codegen-units = 1
# Remove debug info and symbol tables
strip = true
